--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,10 +7,10 @@
             </a>
             <div class="nav_menu">
                 <a class="nav_link link_current" routerLink="/product">Product</a>
-                <a class="nav_link" routerLink="/person">Person</a>
+                <!-- <a class="nav_link" routerLink="/person">Person</a>
                 <a class="nav_link" href="/">CAREERS</a>
                 <a class="nav_link" href="/">CONNECT</a>
-                <a class="nav_link contact" href="/">PROFILE</a>
+                <a class="nav_link contact" href="/">PROFILE</a> -->
             </div>
             <div class="menu_button"></div>
         </div>
