--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -5,7 +5,7 @@
                 <h2>Product <b>Details</b></h2>
             </div>
             <div class="col-sm-4">
-                    <button type="button" class="btn btn-info add-new" (click)="redirectToAdd()"><i class="fa fa-plus"></i> Add New</button>
+                    <button type="button" class="btn btn-info add-new" (click)="redirectToAddProduct()"><i class="fa fa-plus"></i> Add New</button>
             </div>
         </div>
     </div>
