--- a/src/app/product/product-add/product-add.component.html
+++ b/src/app/product/product-add/product-add.component.html
@@ -1,30 +1,40 @@
 <h3>Add Product</h3>
-<form #frmAdd="ngForm" (ngSubmit)="createProduct(frmAdd.value)">
+<form [formGroup]="frmAddProduct" (ngSubmit)="createProduct(frmAddProduct.value)">
     <div class="editProduct">
         <div class="mb-3 row">
             <label for="name" class="col-sm-2 col-form-label">Name</label>
             <div class="col-sm-10">
-                <input type=" text" id="name" name="name" ngModel>
+                <input type=" text" id="name" required="" formControlName="name" ngModel>
             </div>
+            <p *ngIf="(!frmAddProduct.controls.name.valid) && (frmAddProduct.controls.name.dirty|| frmAddProduct.controls.name.touched)"
+                class="text-danger">Name doesn't have content</p>
+
         </div>
         <div class="mb-3 row">
             <label for="descriptionArea" class="col-sm-2 col-form-label">Desription</label>
             <div class="col-sm-10">
-                <textarea class="form-control" id="descriptionArea" rows="3" name="description" ngModel></textarea>
+                <textarea class="form-control" id="descriptionArea" rows="3" formControlName="description" required
+                    ngModel></textarea>
             </div>
+            <p *ngIf="(!frmAddProduct.controls.description.valid) && (frmAddProduct.controls.description.dirty|| frmAddProduct.controls.name.touched)"
+                class="text-danger">Name doesn't have content</p>
         </div>
         <div class="mb-3 row">
             <label for="price" class="col-sm-2 col-form-label">Price</label>
             <div class="col-sm-10">
-                <input type="number" id="price" ngModel name="price">
+                <input type="number" id="price" required ngModel formControlName="price">
             </div>
+            <p *ngIf="(!frmAddProduct.controls.quantity.valid) && (frmAddProduct.controls.quantity.dirty|| frmAddProduct.controls.quantity.touched)"
+                class="text-danger">Price not is number</p>
         </div>
         <div class="mb-3 row">
             <label for="quantity" class="col-sm-2 col-form-label">Quantity</label>
             <div class="col-sm-10">
-                <input type="number" id="quantity" ngModel name="quantity">
+                <input type="number" id="quantity" required ngModel formControlName="quantity">
             </div>
+            <p *ngIf="(!frmAddProduct.controls.quantity.valid) && (frmAddProduct.controls.quantity.dirty|| frmAddProduct.controls.quantity.touched)"
+                class="text-danger">Quantity not is number</p>
         </div>
-        <button type="submit" class="btn btn-primary editProduct_btn">Save</button>
+        <button type="submit" [disabled]="!frmAddProduct.valid" class="btn btn-primary editProduct_btn">Save</button>
     </div>
 </form>
