--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -26,7 +26,7 @@
                 <td>{{item.price}}</td>
                 <td>{{item.quantity}}</td>
                 <td>
-                    <a class="edit" title="Edit" data-toggle="tooltip" [routerLink]="['./edit',item.id]">
+                    <a class="edit" title="Edit" data-toggle="tooltip" (click)="redirectToEditProduct(item.id)">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-pen-fill" viewBox="0 0 16 16">
                             <path
