--- a/src/app/product/product-add/product-add.component.html
+++ b/src/app/product/product-add/product-add.component.html
@@ -4,7 +4,7 @@
         <div class="mb-3 row">
             <label for="name" class="col-sm-2 col-form-label">Name</label>
             <div class="col-sm-10">
-                <input type=" text" id="name" required="" formControlName="name" ngModel>
+                <input type=" text" id="name" required="" formControlName="name">
             </div>
             <p *ngIf="(!frmAddProduct.controls.name.valid) && (frmAddProduct.controls.name.dirty|| frmAddProduct.controls.name.touched)"
                 class="text-danger">Name doesn't have content</p>
@@ -13,8 +13,7 @@
         <div class="mb-3 row">
             <label for="descriptionArea" class="col-sm-2 col-form-label">Desription</label>
             <div class="col-sm-10">
-                <textarea class="form-control" id="descriptionArea" rows="3" formControlName="description" required
-                    ngModel></textarea>
+                <textarea class="form-control" id="descriptionArea" rows="3" formControlName="description" required></textarea>
             </div>
             <p *ngIf="(!frmAddProduct.controls.description.valid) && (frmAddProduct.controls.description.dirty|| frmAddProduct.controls.description.touched)"
                 class="text-danger">Name doesn't have content</p>
@@ -22,7 +21,7 @@
         <div class="mb-3 row">
             <label for="price" class="col-sm-2 col-form-label">Price</label>
             <div class="col-sm-10">
-                <input type="number" id="price" required ngModel formControlName="price">
+                <input type="number" id="price" required formControlName="price">
             </div>
             <p *ngIf="(!frmAddProduct.controls.price.valid) && (frmAddProduct.controls.price.dirty|| frmAddProduct.controls.price.touched)"
                 class="text-danger">Price not is number</p>
@@ -30,7 +29,7 @@
         <div class="mb-3 row">
             <label for="quantity" class="col-sm-2 col-form-label">Quantity</label>
             <div class="col-sm-10">
-                <input type="number" id="quantity" required ngModel formControlName="quantity">
+                <input type="number" id="quantity" required formControlName="quantity">
             </div>
             <p *ngIf="(!frmAddProduct.controls.quantity.valid) && (frmAddProduct.controls.quantity.dirty|| frmAddProduct.controls.quantity.touched)"
                 class="text-danger">Quantity not is number</p>
