--- a/src/app/product/product-add/product-add.component.html
+++ b/src/app/product/product-add/product-add.component.html
@@ -21,7 +21,7 @@
         <div class="mb-3 row">
             <label for="price" class="col-sm-2 col-form-label">Price</label>
             <div class="col-sm-10">
-                <input type="number" id="price" required formControlName="price">
+                <input type="number" id="price" formControlName="price">
             </div>
             <p *ngIf="(!frmAddProduct.controls.price.valid) && (frmAddProduct.controls.price.dirty|| frmAddProduct.controls.price.touched)"
                 class="text-danger">Price not is number</p>
@@ -29,7 +29,7 @@
         <div class="mb-3 row">
             <label for="quantity" class="col-sm-2 col-form-label">Quantity</label>
             <div class="col-sm-10">
-                <input type="number" id="quantity" requireds formControlName="quantity">
+                <input type="number" id="quantity" formControlName="quantity">
             </div>
             <p *ngIf="(!frmAddProduct.controls.quantity.valid) && (frmAddProduct.controls.quantity.dirty|| frmAddProduct.controls.quantity.touched)"
                 class="text-danger">Quantity not is number</p>
